# control-project

./: README.md
control_controller/: CMakeLists.txt  package.xml
control_controller/include/: eiquadprog.hpp
control_controller/src/: main.cpp
control_path_planner/: CMakeLists.txt  package.xml
control_path_planner/launch/: planner.launch
control_path_planner/src/: main.cpp
control_path_planner/stage/: pioneer_office.world
control_traj_planner/: CMakeLists.txt  package.xml
control_traj_planner/include/: BSpline.h
control_traj_planner/launch/: planner.launch
control_traj_planner/src/: main.cpp
control_traj_planner/stage/: pioneer.inc
matlab_code_control_project/: control_reference.m  derivative_tangent.m  make_init_traj.m  qb_spline.m  quintic_blezier_spline.m  second_derivative_tangent.m
